--- a/template/main.html
+++ b/template/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merge Test</title>
     <link rel="stylesheet" href="../css/scss/test.css">
+    <link rel="stylesheet" href="../css/markerStyle.css">
     <script src="../js/jquery-1.9.1.js"></script>
     <!--폰트 적용-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,11 +61,9 @@
                     </select>
                 </li>
             </ul>
-            <div class="drawing-buttons">
-                <button id="drawing-desktop" class="button">자전거도로 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
-                <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
-                <button id="drawing-mobile" class="button">자전거도로 그리기</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
-                <button id="delete-mobile" class="button">삭제</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
+            <div class="measure-buttons">
+                <button id="distance-desktop" class="button">자전거도로 그리기</button>
+                <button id="distance-mobile" class="button">자전거도로 그리기</button>
             </div>
         </nav>
     </header>
