Feat: 자전거도로 그리기 부분

--- a/template/main.html
+++ b/template/main.html
@@ -62,8 +62,10 @@
                 </li>
             </ul>
             <div class="measure-buttons">
-                <button id="distance-desktop" class="button">자전거도로 그리기</button>
-                <button id="distance-mobile" class="button">자전거도로 그리기</button>
+                <button id="drawing-desktop" class="button">자전거도로 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+                <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+                <button id="drawing-mobile" class="button">자전거도로 그리기</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
+                <button id="delete-mobile" class="button">삭제</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
             </div>
         </nav>
     </header>
