--- a/template/main.html
+++ b/template/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merge Test</title>
-    <link rel="stylesheet" href="../css/scss/test.css">
+    <link rel="stylesheet" href="../css/test.css">
     <link rel="stylesheet" href="../css/markerStyle.css">
     <script src="../js/jquery-1.9.1.js"></script>
     <!--폰트 적용-->
