--- a/template/main.html
+++ b/template/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merge Test</title>
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/scss/test.css">
     <link rel="stylesheet" href="../css/markerStyle.css">
     <script src="../js/jquery-1.9.1.js"></script>
     <!--폰트 적용-->
@@ -30,10 +30,6 @@
             <div class="navbar_logo">
                 <a href="page.html"><img src="../images/logo.png" alt="로고" width="60" height="60"></a> <!--로고크기수정-->
                 <a href="page.html">zagza</a>
-            </div>
-            <div class="desktop-drawing-buttons">
-                <button id="drawing-desktop" class="button">자전거 도로 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
-                <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
             </div>
             <!-- <div class="navbar_menu">
                         <a href="#">소개</a> 
@@ -65,8 +61,11 @@
                     </select>
                 </li>
             </ul>
-
         </nav>
+        <div class="desktop-drawing-buttons">
+            <button id="drawing-desktop" class="button">자전거 도로 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+            <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+        </div>
     </header>
     <!--데스크톱 해더 끝-->
     <button id="manual_btn" type="button">?</button> <!-- 사용설명 팝업창을 띄우는 물음표 버튼-->
