Feat: 모바일 사용방법 팝업창 수정

--- a/css/scss/test.scss
+++ b/css/scss/test.scss
@@ -946,7 +946,7 @@ body {
     left: 90%;
     width: 30px;
 }
-.filter-manual-btn {
+#filter-manual-btn {
     float: right;
     width: 25px;
     height: 25px;
