--- a/template/main.html
+++ b/template/main.html
@@ -153,7 +153,7 @@
                 <a href="page.html"><span class="mobile-logo">zagza</span></a>
                 </div>
                 <div class="filter-manual">
-                    <button class="filter-manual-btn" type="button">?</button>
+                    <button id="filter-manual-btn" type="button">?</button>
                 </div>
                 <div id="mobile-container" class="closed">
                     <button type="button" id="mobile-toggle-aside" class="toggle-button">정보</button>
