--- a/template/main.html
+++ b/template/main.html
@@ -79,8 +79,8 @@
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;'거리순' 필터는 자전거 코스의 길이를 나타냅니다.</li> 
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;'장소' 필터는 각 구마다의 코스를 나타냅니다.</li> 
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;'풍경' 필터는 공원이나 바다 같은 주변 풍경을 나타냅니다.</li></p>
-            <p><h3>지도에 표시되는 마커나 폴리라인 클릭 시 추천하는 코스가 나옵니다.</h3>
-                &nbsp;&nbsp;&nbsp;&nbsp;지도 위의 마커와 폴리라인 종류는 총 4가지로 풍경에 따라 색으로 분류 할 수 있습니다.
+            <p><h3>지도에 표시되는 마커나 선을 클릭 시 추천하는 코스가 나옵니다.</h3>
+                &nbsp;&nbsp;&nbsp;&nbsp;지도 위의 마커와 선의 종류는 총 4가지로 풍경에 따라 색으로 분류 할 수 있습니다.
                 <span class="manual_thema">&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="manual_thema_logo" ><img src="../images/park_marker.png"><span id="forestgreen">공원</span></span>
                     <span class="manual_thema_logo" ><img src="../images/river_marker.png"><span id="turquoise">강변</span></span>
@@ -91,7 +91,8 @@
                 <li></li>
             </ul>
             <ul><h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성시 : '자전거도로 그리기' 버튼 클릭 > 지도 위 시작지점 클릭 > 코너 부분마다 클릭 후 마지막 도착지점 클릭 > 마우스 우클릭 마무리</li>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성시 : '자전거도로 그리기' 버튼 클릭 > 지도 위 시작지점 클릭 > 코너 부분마다 클릭 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    > 마지막 도착지점 클릭 > 마우스 우클릭 마무리</li>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 삭제시 : '삭제' 버튼 클릭 (가장 마지막에 그렸던 도로 부터 삭제 되니 주의)</li>
                 <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성 중 중단: '취소' 버튼 클릭</li></ul>
         </div>
@@ -228,11 +229,11 @@
                     <h1>사용방법</h1>
                     <span class="mobile_close" id="mobile_closeModalButton">&times;</span>
                 </div>
-                <ul><h3>왼쪽 위 버거바 클릭 시 필터를 사용하실 수 있습니다.</h3>
+                <ul><h3>왼쪽 위 버거바 클릭 시 필터를 사용할 수 있습니다.</h3>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;'거리순' 필터> 자전거 코스의 길이</li> 
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;'장소' 필터> 각 구마다의 코스</li> 
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;'풍경' 필터> 공원이나 바다 같은 주변 풍경</li></p>
-                <p><h3>지도에 표시되는 마커나 폴리라인 클릭 시 추천하는 코스가 나옵니다.</h3>
+                <p><h3>지도 위 마커나 선을 클릭 시 추천 코스가 나옵니다.</h3>
                     &nbsp;&nbsp;&nbsp;&nbsp; 풍경에 따른 4가지 색 분류
                     <span class="mobile_manual_thema">
                         <span class="mobile_manual_thema_logo" ><img src="../images/park_marker.png"><span id="forestgreen">공원</span></span>
@@ -240,12 +241,15 @@
                         <span class="mobile_manual_thema_logo" ><img src="../images/beach_marker.png"><span id="cobalt_blue">바다</span></span>
                         <span class="mobile_manual_thema_logo" ><img src="../images/city_marker.png"><span id="cadetblue">도시</span></span>
                     </span><br></p>
-                <ul><h3>오른쪽 아래 '정보' 버튼을 클릭하여 추천하는 코스의 간단한 정보를 확인 하실 수 있습니다.</h3>
+                <ul><h3>오른쪽 아래 '정보' 버튼을 클릭하여 코스의 간단한 정보를 확인 하실 수 있습니다.</h3>
                     <li></li>
                 </ul>
                 <ul><h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성시 : '자전거도로 그리기' 버튼 클릭 > 지도 위 시작지점 클릭 > 코너 부분마다 클릭 후 마지막 도착지점 클릭 > 마우스 우클릭 마무리</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 삭제시 : '삭제' 버튼 클릭 (가장 마지막에 그렸던 도로 부터 삭제 되니 주의)</li>
+                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성시 : <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭 
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭 
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭 
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리</li>
+                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 삭제시 : '삭제' 버튼 클릭 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(가장 마지막에 그렸던 도로 부터 삭제)</li>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성 중 중단: '취소' 버튼 클릭</li>
                 </ul>
             </div>
