--- a/template/main.html
+++ b/template/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merge Test</title>
-    <link rel="stylesheet" href="../css/scss/test.css">
+    <link rel="stylesheet" href="../css/test.css">
     <link rel="stylesheet" href="../css/markerStyle.css">
     <script src="../js/jquery-1.9.1.js"></script>
     <!--폰트 적용-->
@@ -47,8 +47,8 @@
                     </select>
                 </li>
                 <li>
-                    <select id="장소" class="combo-box">
-                        <option value="" selected>장소</option>
+                    <select id="위치" class="combo-box">
+                        <option value="" selected>위치</option>
                     </select>
                 </li>
                 <li>
@@ -75,26 +75,29 @@
                 <h1>사용방법</h1>
                 <span class="close" id="closeModalButton">&times;</span>
             </div>
-            <ul><h3>오른쪽 위 필터를 사용하시면 원하는 코스를 쉽게 걸러 보실 수 있습니다.</h3>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;'거리순' 필터는 자전거 코스의 길이를 나타냅니다.</li> 
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;'장소' 필터는 각 구마다의 코스를 나타냅니다.</li> 
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;'풍경' 필터는 공원이나 바다 같은 주변 풍경을 나타냅니다.</li></p>
-            <p><h3>지도에 표시되는 마커나 선을 클릭 시 추천하는 코스가 나옵니다.</h3>
-                &nbsp;&nbsp;&nbsp;&nbsp;지도 위의 마커와 선의 종류는 총 4가지로 풍경에 따라 색으로 분류 할 수 있습니다.
-                <span class="manual_thema">&nbsp;&nbsp;&nbsp;&nbsp;
+            <ul><h3>우측 상단의 필터를 사용하시면 원하는 코스를 쉽게 걸러 보실 수 있습니다.</h3>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>거리순</strong>: 자전거 코스의 길이에 따른 필터를 제공합니다.</li> 
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>위치</strong>: 자전거 코스가 속한 위치(구/군 기준)에 따른 필터를 제공합니다.</li> 
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>풍경</strong>: 주변 풍경(공원,강변, 바다, 도시)에 따른 필터를 제공합니다.</li></p>
+            <p><h3>지도에 표시되는 마커나 선을 클릭 시 좌측 요약창에 정보가 표시됩니다.</h3></p>
+            <p><h3>추천 코스는 테마에 따라 4가지 색으로 표현됩니다.</h3>
+                <span class="manual_thema">&nbsp;&nbsp;
                     <span class="manual_thema_logo" ><img src="../images/park_marker.png"><span id="forestgreen">공원</span></span>
                     <span class="manual_thema_logo" ><img src="../images/river_marker.png"><span id="turquoise">강변</span></span>
                     <span class="manual_thema_logo" ><img src="../images/beach_marker.png"><span id="cobalt_blue">바다</span></span>
                     <span class="manual_thema_logo" ><img src="../images/city_marker.png"><span id="cadetblue">도시</span></span>
-                </span><br></p>
-            <ul><h3>왼쪽 옆 화살표 클릭하여 추천하는 코스의 간단한 정보를 확인 하실 수 있습니다.</h3>
+                </span><br>
+            </p>
+            <ul><h3>좌측 요약창의 화살표를 클릭 시 정보 요약 창을 축소시킬 수 있습니다.</h3>
                 <li></li>
             </ul>
             <ul><h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성시 : '자전거도로 그리기' 버튼 클릭 > 지도 위 시작지점 클릭 > 코너 부분마다 클릭 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    > 마지막 도착지점 클릭 > 마우스 우클릭 마무리</li>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 삭제시 : '삭제' 버튼 클릭 (가장 마지막에 그렸던 도로 부터 삭제 되니 주의)</li>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성 중 중단: '취소' 버튼 클릭</li></ul>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> : <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭 
+                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭 
+                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭 
+                    <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br></li>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 삭제시</strong> : '삭제' 버튼 클릭 (가장 마지막에 그렸던 코스부터 개별 삭제됩니다.)<br><br></li>
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성 중 중단</strong>: '취소' 버튼 클릭</li>
         </div>
     </div>
 
@@ -183,9 +186,9 @@
                             </select>
                         </div>
                         <div class="filter-item">
-                            <label for="combo2">장소</label>
-                            <select id="장소" class="filter-comboBox">
-                                <option value="" selected>장소</option>
+                            <label for="combo2">위치</label>
+                            <select id="위치" class="filter-comboBox">
+                                <option value="" selected>위치</option>
                             </select>
                         </div>
                         <div class="filter-item">
@@ -229,28 +232,29 @@
                     <h1>사용방법</h1>
                     <span class="mobile_close" id="mobile_closeModalButton">&times;</span>
                 </div>
-                <ul><h3>왼쪽 위 버거바 클릭 시 필터를 사용할 수 있습니다.</h3>
+                <ul><h3>왼쪽 상단의 메뉴 버튼을 클릭 시 <br> 필터를 사용할 수 있습니다.</h3>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;'거리순' 필터> 자전거 코스의 길이</li> 
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;'장소' 필터> 각 구마다의 코스</li> 
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;'풍경' 필터> 공원이나 바다 같은 주변 풍경</li></p>
-                <p><h3>지도 위 마커나 선을 클릭 시 추천 코스가 나옵니다.</h3>
-                    &nbsp;&nbsp;&nbsp;&nbsp; 풍경에 따른 4가지 색 분류
-                    <span class="mobile_manual_thema">
+                <p><h3>지도 위의 마커나 선을 클릭 시<br>하단에 있는 요약창에 정보가 표시됩니다.</h3></p>
+                <p><h3>추천 코스는 테마에 따라<br> 4가지 색으로 표현됩니다.</h3>
+                    <span class="mobile_manual_thema" style="text-align: center;">
                         <span class="mobile_manual_thema_logo" ><img src="../images/park_marker.png"><span id="forestgreen">공원</span></span>
                         <span class="mobile_manual_thema_logo" ><img src="../images/river_marker.png"><span id="turquoise">강변</span></span>
                         <span class="mobile_manual_thema_logo" ><img src="../images/beach_marker.png"><span id="cobalt_blue">바다</span></span>
                         <span class="mobile_manual_thema_logo" ><img src="../images/city_marker.png"><span id="cadetblue">도시</span></span>
-                    </span><br></p>
-                <ul><h3>오른쪽 아래 '정보' 버튼을 클릭하여 코스의 간단한 정보를 확인 하실 수 있습니다.</h3>
+                    </span><br>
+                </p> 
+                <ul><h3>우측 하단의 '정보' 버튼을 클릭 시<br> 정보 요약 창을 축소시킬 수 있습니다.</h3>
                     <li></li>
                 </ul>
-                <ul><h3>'자전거도로 그리기' 버튼을 누르면 자전거 코스를 그릴 수 있습니다.</h3>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성시 : <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭 
+                <ul><h3>'자전거도로 그리기' 버튼을 누르면<br> 자전거 코스를 그릴 수 있습니다.</h3>
+                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성시</strong> : <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'자전거도로 그리기' 버튼 클릭 
                         <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 지도 위 시작지점 클릭 
                         <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 코너 부분마다 클릭 후 마지막 도착지점 클릭 
-                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 삭제시 : '삭제' 버튼 클릭 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(가장 마지막에 그렸던 도로 부터 삭제)</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;도로 생성 중 중단: '취소' 버튼 클릭</li>
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> 마우스 우클릭 마무리<br><br></li>
+                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 삭제시</strong> : '삭제' 버튼 클릭 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(가장 마지막에 그렸던 코스부터 개별 삭제됩니다.)<br><br></li>
+                    <li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>코스 생성 중 중단</strong>: '취소' 버튼 클릭</li>
                 </ul>
             </div>
         </div>
