Feat: 자전거도로 그리기 -> 자전거코스 그리기

--- a/template/main.html
+++ b/template/main.html
@@ -63,7 +63,7 @@
             </ul>
         </nav>
         <div class="desktop-drawing-buttons">
-            <button id="drawing-desktop" class="button">자전거 도로 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
+            <button id="drawing-desktop" class="button">자전거 코스 그리기</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
             <button id="delete-desktop" class="button">삭제</button> <!-- 데스크탑에선 모바일버튼 숨기기-->
         </div>
     </header>
@@ -169,7 +169,7 @@
                     <button type="button" id="mobile-toggle-aside" class="toggle-button">정보</button>
                 </div>   
                 <div id="mobile-drawing-buttons" class="mobile-drawing-buttons">
-                    <button id="drawing-mobile" class="button">자전거도로 그리기</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
+                    <button id="drawing-mobile" class="button">자전거코스 그리기</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
                     <button id="delete-mobile" class="button">삭제</button> <!-- 모바일에선 데스크탑버튼 숨기기-->
                 </div>
             </header>
